discussion/kv_engine/179511/179511_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53304: Enforce holding of stateLock in VBucket::queueItem [3/n]

MB-53304 suggests we ensure that the stateLock is held by passing a ref
to it in queueItem (and the call hierarchy of queueItem).

This change will allow the ref passed down to be either a lock on the
individual vbucket state or on all states (`vbSetMutex`).

In a future change I will change function signatures to receive this
ref and eventually pass it down to queueItem.

Change-Id: I953f9b8c00256f39d2845b330a18122b053a5b96

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-09-02 13:25:47.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-02 13:35:19.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48944/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48944/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9793/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9793/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21279/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21279/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22314/ : ABORTED

Test exceeded the timeout:
[2022-09-02T13:35:12.739Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22314/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22314/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23051/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23051/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30344/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30344/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30344/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19993/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/lock_utilities.h:41:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(uhl.owns_lock());
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19993/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/lock_utilities.h:41:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19993/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41142/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/lock_utilities.h:41:9:
error: use of undeclared identifier "Expects"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41142/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9693/ : FAILURE

Compile error at [2022-09-02T13:28:14.524Z] ../kv_engine/utilities/lock_utilities.h:41:9:
error: use of undeclared identifier "Expects"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9693/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19214/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21956/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
